--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,5 +53,5 @@ notifications:
     on_build_status_changed: false
 
 test_script:
-  - cmd: sbt "test-only org.apache.spark.repl.*"
+  - cmd: sbt "test-only org.apache.spark.sql.hive.*"
 
