--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,5 +53,5 @@ notifications:
     on_build_status_changed: false
 
 test_script:
-  - cmd: sbt "test-only org.apache.spark.sql.execution.joins.BroadcastJoinSuite"
+  - cmd: sbt "test-only org.apache.spark.sql.*"
 
