--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,5 +53,7 @@ notifications:
     on_build_status_changed: false
 
 test_script:
+  - cmd: SET test="abc"
+  - cmd: printenv TEST
   - cmd: sbt -Pyarn -Phadoop-2.3 -Phive -Phive-thriftserver test
 
