--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,5 +55,6 @@ notifications:
 test_script:
   - cmd: SET test="abc"
   - cmd: printenv TEST
+  - cmd: SET TEST
   - cmd: sbt -Pyarn -Phadoop-2.3 -Phive -Phive-thriftserver test
 
