--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,5 +53,5 @@ notifications:
     on_build_status_changed: false
 
 test_script:
-  - cmd: sbt -Pyarn -Phadoop-2.3 -Phive -Phive-thriftserver --error "test-only org.apache.spark.sql.*" | findstr \[error\]
+  - cmd: sbt -Pyarn -Phadoop-2.3 -Phive -Phive-thriftserver --error "test-only org.apache.spark.sql.*"
 
