--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,46 +24,6 @@ environment:
   # Disable lint
   NOLINT_ON_COMPILE: 0
 
-  matrix:
-    - goal: "catalyst/test"
-      profiles: ""
-    - goal: "sql/test"
-      profiles: ""
-    - goal: "hive/test"
-      profiles: "-Phive"
-    - goal: "hive-thriftserver/test"
-      profiles: "-Phive-thriftserver"
-    - goal: "sql-kafka-0-10/test"
-      profiles: ""
-    - goal: "sketch/test"
-      profiles: ""
-    - goal: "graphx/test"
-      profiles: ""
-    - goal: "streaming/test"
-      profiles: ""
-    - goal: "streaming-kinesis-asl/test"
-      profiles: "-Pkinesis-asl"
-    - goal: "streaming-kafka-0-8/test"
-      profiles: ""
-    - goal: "streaming-kafka-0-10/test"
-      profiles: ""
-    - goal: "streaming-flume-sink/test"
-      profiles: ""
-    - goal: "streaming-flume/test"
-      profiles: ""
-    - goal: "mllib-local/test"
-      profiles: ""
-    - goal: "mllib/test"
-      profiles: ""
-    - goal: "examples/test"
-      profiles: ""
-    - goal: "yarn/test"
-      profiles: "-Pyarn"
-    - goal: "network-yarn/test"
-      profiles: "-Pyarn"
-    - goal: "mesos/test"
-      profiles: "-Pmesos"
-
 cache:
   - C:\Users\appveyor\.m2
 
@@ -84,7 +44,7 @@ install:
   - cmd: SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g
 
 build_script:
-  - cmd: sbt -Phadoop-2.3 %profiles% package
+  - cmd: sbt -Phadoop-2.3 -Phive -Phive-thriftserver package
 
 notifications:
   - provider: Email
@@ -93,5 +53,5 @@ notifications:
     on_build_status_changed: false
 
 test_script:
-  - cmd: sbt -Phadoop-2.3 %profiles% %goal%
+  - cmd: sbt -Phadoop-2.3 -Phive -Phive-thriftserver "test-only org.apache.spark.sql.hive.StatisticsSuite org.apache.spark.sql.hive.execution.SQLQuerySuite org.apache.spark.sql.hive.PartitionProviderCompatibilitySuite org.apache.spark.sql.hive.HiveExternalCatalogSuite org.apache.spark.sql.hive.execution.HiveDDLSuite org.apache.spark.sql.hive.execution.HiveQuerySuite org.apache.spark.sql.catalyst.LogicalPlanToSQLSuite org.apache.spark.sql.hive.ShowCreateTableSuite org.apache.spark.sql.hive.execution.ScriptTransformationSuite org.apache.spark.sql.hive.execution.HashAggregationQueryWithControlledFallbackSuite org.apache.spark.sql.hive.MetastoreDataSourcesSuite org.apache.spark.sql.hive.execution.HiveCommandSuite org.apache.spark.sql.hive.QueryPartitionSuite org.apache.spark.sql.hive.ParquetHiveCompatibilitySuite org.apache.spark.sql.hive.PartitionedTablePerfStatsSuite org.apache.spark.sql.hive.execution.HiveUDFSuite org.apache.spark.sql.hive.HiveSparkSubmitSuite org.apache.spark.sql.hive.execution.HashAggregationQuerySuite org.apache.spark.sql.hive.DataSourceWithHiveMetastoreCatalogSuite org.apache.spark.sql.hive.execution.WindowQuerySuite org.apache.spark.sql.hive.orc.OrcSourceSuite org.apache.spark.sql.hive.ParquetMetastoreSuite org.apache.spark.sql.hive.execution.HiveSerDeSuite org.apache.spark.sql.hive.ParquetSourceSuite org.apache.spark.sql.hive.HiveExternalCatalogBackwardCompatibilitySuite"
 
