Split failed Hive tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,6 +33,12 @@ environment:
       profiles: ""
     - goal: "hive/test"
       profiles: "-Phive"
+    - goal: "test-only org.apache.spark.sql.hive.StatisticsSuite org.apache.spark.sql.hive.execution.SQLQuerySuite org.apache.spark.sql.hive.PartitionProviderCompatibilitySuite org.apache.spark.sql.hive.HiveExternalCatalogSuite org.apache.spark.sql.hive.execution.HiveDDLSuite org.apache.spark.sql.hive.execution.HiveQuerySuite org.apache.spark.sql.catalyst.LogicalPlanToSQLSuite org.apache.spark.sql.hive.ShowCreateTableSuite org.apache.spark.sql.hive.execution.ScriptTransformationSuite org.apache.spark.sql.hive.execution.HashAggregationQueryWithControlledFallbackSuite org.apache.spark.sql.hive.MetastoreDataSourcesSuite org.apache.spark.sql.hive.execution.HiveCommandSuite org.apache.spark.sql.hive.QueryPartitionSuite org.apache.spark.sql.hive.ParquetHiveCompatibilitySuite org.apache.spark.sql.hive.PartitionedTablePerfStatsSuite"
+      profiles: "-Phive"
+    - goal: "test-only org.apache.spark.sql.hive.execution.HiveUDFSuite"
+      profiles: "-Phive"
+    - goal: "test-only org.apache.spark.sql.hive.HiveSparkSubmitSuite org.apache.spark.sql.hive.execution.HashAggregationQuerySuite org.apache.spark.sql.hive.DataSourceWithHiveMetastoreCatalogSuite org.apache.spark.sql.hive.execution.WindowQuerySuite org.apache.spark.sql.hive.orc.OrcSourceSuite org.apache.spark.sql.hive.ParquetMetastoreSuite org.apache.spark.sql.hive.execution.HiveSerDeSuite org.apache.spark.sql.hive.ParquetSourceSuite org.apache.spark.sql.hive.HiveExternalCatalogBackwardCompatibilitySuite"
+      profiles: "-Phive"
     - goal: "sql-kafka-0-10/test"
       profiles: ""
     - goal: "sketch/test"
