--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,52 +25,8 @@ environment:
   NOLINT_ON_COMPILE: 0
 
   matrix:
-    - goal: "core/test"
-      profiles: ""
-    - goal: "catalyst/test"
-      profiles: ""
-    - goal: "sql/test"
-      profiles: ""
-    - goal: "hive/test"
+    - goal: "\"test-only org.apache.spark.sql.hive.HiveMetadataCacheSuite org.apache.spark.sql.hive.MultiDatabaseSuite org.apache.spark.sql.hive.orc.OrcQuerySuite org.apache.spark.sql.hive.orc.OrcHadoopFsRelationSuite org.apache.spark.sql.sources.JsonHadoopFsRelationSuite org.apache.spark.sql.hive.execution.PruneFileSourcePartitionsSuite org.apache.spark.sql.hive.execution.HiveCommandSuite org.apache.spark.sql.hive.HiveExternalCatalogBackwardCompatibilitySuite org.apache.spark.sql.hive.MetastoreDataSourcesSuite org.apache.spark.sql.hive.HiveMetastoreCatalogSuite org.apache.spark.repl.ReplSuite\""
       profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.sql.hive.StatisticsSuite org.apache.spark.sql.hive.execution.SQLQuerySuite org.apache.spark.sql.hive.PartitionProviderCompatibilitySuite org.apache.spark.sql.hive.HiveExternalCatalogSuite org.apache.spark.sql.hive.execution.HiveDDLSuite org.apache.spark.sql.hive.execution.HiveQuerySuite org.apache.spark.sql.catalyst.LogicalPlanToSQLSuite org.apache.spark.sql.hive.ShowCreateTableSuite org.apache.spark.sql.hive.execution.ScriptTransformationSuite org.apache.spark.sql.hive.execution.HashAggregationQueryWithControlledFallbackSuite org.apache.spark.sql.hive.MetastoreDataSourcesSuite org.apache.spark.sql.hive.execution.HiveCommandSuite org.apache.spark.sql.hive.QueryPartitionSuite org.apache.spark.sql.hive.ParquetHiveCompatibilitySuite org.apache.spark.sql.hive.PartitionedTablePerfStatsSuite\""
-      profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.sql.hive.execution.HiveUDFSuite\""
-      profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.sql.hive.HiveSparkSubmitSuite org.apache.spark.sql.hive.execution.HashAggregationQuerySuite org.apache.spark.sql.hive.DataSourceWithHiveMetastoreCatalogSuite org.apache.spark.sql.hive.execution.WindowQuerySuite org.apache.spark.sql.hive.orc.OrcSourceSuite org.apache.spark.sql.hive.ParquetMetastoreSuite org.apache.spark.sql.hive.execution.HiveSerDeSuite org.apache.spark.sql.hive.ParquetSourceSuite org.apache.spark.sql.hive.HiveExternalCatalogBackwardCompatibilitySuite\""
-      profiles: "-Phive"
-    - goal: "sql-kafka-0-10/test"
-      profiles: ""
-    - goal: "sketch/test"
-      profiles: ""
-    - goal: "graphx/test"
-      profiles: ""
-    - goal: "streaming/test"
-      profiles: ""
-    - goal: "streaming-kafka-0-8/test"
-      profiles: ""
-    - goal: "streaming-kafka-0-10/test"
-      profiles: ""
-    - goal: "streaming-flume-sink/test"
-      profiles: ""
-    - goal: "streaming-flume/test"
-      profiles: ""
-    - goal: "mllib-local/test"
-      profiles: ""
-    - goal: "mllib/test"
-      profiles: ""
-    - goal: "examples/test"
-      profiles: ""
-    - goal: "repl/test"
-      profiles: ""
-    - goal: "network-common/test"
-      profiles: ""
-    - goal: "network-shuffle/test"
-      profiles: ""
-    - goal: "launcher/test"
-      profiles: ""
-    - goal: "unsafe/test"
-      profiles: ""
 cache:
   - C:\Users\appveyor\.m2
 
