--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,8 @@ environment:
   matrix:
     - goal: "\"test-only org.apache.spark.sql.hive.PartitionProviderCompatibilitySuite org.apache.spark.sql.hive.StatisticsSuite org.apache.spark.sql.hive.execution.SQLQuerySuite org.apache.spark.sql.hive.execution.HiveDDLSuite org.apache.spark.sql.hive.ShowCreateTableSuite org.apache.spark.sql.hive.PartitionedTablePerfStatsSuite org.apache.spark.sql.hive.HiveSparkSubmitSuite org.apache.spark.util.UtilsSuite\""
       profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.sql.hive.execution.HiveDDLSuite\""
+      profiles: "-Phive"
 cache:
   - C:\Users\appveyor\.m2
 
