--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,12 @@ environment:
       profiles: "-Phive"
     - goal: "\"test-only org.apache.spark.sql.hive.execution.HiveDDLSuite org.apache.spark.sql.hive.ShowCreateTableSuite org.apache.spark.sql.hive.PartitionedTablePerfStatsSuite org.apache.spark.sql.hive.HiveSparkSubmitSuite org.apache.spark.util.UtilsSuite\""
       profiles: "-Phive"
+    - goal: "\"test-only *.Java* \""
+      profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.sql.hive.execution.WindowQuerySuite org.apache.spark.sql.hive.orc.OrcSourceSuite org.apache.spark.sql.hive.ParquetMetastoreSuite org.apache.spark.sql.hive.ParquetSourceSuite\""
+      profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.streaming.kafka.KafkaRDDSuite org.apache.spark.streaming.kafka.DirectKafkaStreamSuite org.apache.spark.streaming.kafka.ReliableKafkaStreamSuite org.apache.spark.streaming.kafka.KafkaStreamSuite org.apache.spark.streaming.kafka.KafkaClusterSuite org.apache.spark.streaming.kafka010.DirectKafkaStreamSuite org.apache.spark.streaming.kafka010.KafkaRDDSuite\""
+      profiles: ""
 cache:
   - C:\Users\appveyor\.m2
 
