--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,10 +25,8 @@ environment:
   NOLINT_ON_COMPILE: 0
 
   matrix:
-    - goal: "\"test-only *.Java* \""
+    - goal: "\"test-only org.apache.spark.sql.hive.StatisticsSuite org.apache.spark.sql.hive.execution.SQLQuerySuite\""
       profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.streaming.kafka.KafkaRDDSuite org.apache.spark.streaming.kafka.DirectKafkaStreamSuite org.apache.spark.streaming.kafka.ReliableKafkaStreamSuite org.apache.spark.streaming.kafka.KafkaStreamSuite org.apache.spark.streaming.kafka.KafkaClusterSuite org.apache.spark.streaming.kafka010.DirectKafkaStreamSuite org.apache.spark.streaming.kafka010.KafkaRDDSuite\""
-      profiles: ""
 cache:
   - C:\Users\appveyor\.m2
 
