Identified tests (flaky, newly introduced and missed ones)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,13 +27,11 @@ environment:
   matrix:
     - goal: "\"test-only org.apache.spark.sql.hive.execution.HiveQuerySuite\""
       profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.sql.hive.execution.AggregationQuerySuite\""
+    - goal: "\"test-only org.apache.spark.sql.hive.execution.HashAggregationQuerySuite\""
       profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.sql.hive.StatisticsSuite\""
+    - goal: "\"test-only org.apache.spark.sql.hive.execution.HashAggregationQueryWithControlledFallbackSuite\""
       profiles: "-Phive"
     - goal: "\"test-only org.apache.spark.sql.hive.orc.OrcSourceSuite\""
-      profiles: "-Phive"
-    - goal: "\"test-only org.apache.spark.sql.hive.execution.SQLQuerySuite\""
       profiles: "-Phive"
     - goal: "\"test-only org.apache.spark.sql.hive.execution.HiveDDLSuite\""
       profiles: "-Phive"
