--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,46 +25,16 @@ environment:
   NOLINT_ON_COMPILE: 0
 
   matrix:
-    - goal: "core/test"
-      profiles: ""
-    - goal: "catalyst/test"
-      profiles: ""
-    - goal: "sql/test"
-      profiles: ""
-    - goal: "hive/test"
-      profiles: "-Pyarn -Phive -Phive-thriftserver"
-    - goal: "sql-kafka-0-10/test"
-      profiles: ""
-    - goal: "sketch/test"
-      profiles: ""
-    - goal: "graphx/test"
-      profiles: ""
-    - goal: "streaming/test"
-      profiles: ""
-    - goal: "streaming-kafka-0-8/test"
-      profiles: ""
-    - goal: "streaming-kafka-0-10/test"
-      profiles: ""
-    - goal: "streaming-flume-sink/test"
-      profiles: ""
-    - goal: "streaming-flume/test"
-      profiles: ""
-    - goal: "mllib-local/test"
-      profiles: ""
-    - goal: "mllib/test"
-      profiles: ""
-    - goal: "examples/test"
-      profiles: ""
-    - goal: "repl/test"
-      profiles: ""
-    - goal: "network-common/test"
-      profiles: ""
-    - goal: "network-shuffle/test"
-      profiles: ""
-    - goal: "launcher/test"
-      profiles: ""
-    - goal: "unsafe/test"
-      profiles: ""
+    - goal: "\"test-only org.apache.spark.metrics.InputOutputMetricsSuite\""
+      profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.sql.kafka010.KafkaRelationSuite\""
+      profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.sql.kafka010.KafkaSourceSuite\""
+      profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.sql.hive.execution.HiveDDLSuite\""
+      profiles: "-Phive"
+    - goal: "\"test-only org.apache.spark.sql.execution.command.DDLSuite\""
+      profiles: "-Phive"
 cache:
   - C:\Users\appveyor\.m2
 
