--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,6 +38,7 @@ build_script:
   - cmd: mvn -DskipTests -Psparkr -Phive -Phive-thriftserver package
 
 test_script:
+  - cmd: echo %JAVA_HOME%
   - cmd: >
     .\bin\spark-submit2.cmd --driver-java-options "-Dlog4j.configuration=R\log4j.properties"
     --conf spark.hadoop.fs.defaultFS="file:///" R\pkg\tests\run-all.R
